echeck Changelog

2021-09-10  Eric Herman <eric@freesa.org>

	Improve testing of print functions.

	* src/eembed.c: adjust to support better print testing
	* tests/test-eembed-print.c: new file
	* tests/test-eembed-float-to-str.c: add test for very small value
	* tests/test-eembed-log.c: log floats and pointers
	* tests/test-eembed-memcmp.c: try both params as NULL
	* tests/test-eembed-strstr.c: test search for empty string
	* tests/test_echeck_err_log.c: remove console noise
	* Makefile.am: test-eembed-print
	* .gitignore: test-eembed-print


2020-11-28  Eric Herman <eric@freesa.org>

	as nice as it can be to have the source in a zillion files,
	that makes it particularly irritating when dealing with
	arduino, so we'll fold things into as few files as reasonable.

	Added:
	* src/eembed.c:
	Deleted:
	* src/eembed-io.c:
	* src/eembed-malloc-free.c:
	* src/eembed-memcmp.c:
	* src/eembed-memcpy.c:
	* src/eembed-memset.c:
	* src/eembed-strcat.c:
	* src/eembed-strcmp.c:
	* src/eembed-strcpy.c:
	* src/eembed-strlen.c:
	* src/eembed-strstr.c:
	* src/eembed-system-alloc.c:

	Modified
	* src/eembed.h:
	* src/eembed-arduino.h:
	Deleted:
	* src/eembed-assert.h:
	* src/eembed-hosted.h:

	Modified:
	* src/echeck.h:
	* src/echeck.c:
	Deleted:
	* src/echeck-err-injecting-malloc.h:
	* src/echeck-err-injecting-malloc.c:

	Added:
	* echeck_arduino_demo/eembed.cpp:
	Deleted:
	* echeck_arduino_demo/eembed-assert.h:
	* echeck_arduino_demo/eembed-hosted.h:
	* echeck_arduino_demo/eembed-io.cpp:
	* echeck_arduino_demo/eembed-strcmp.cpp:
	* echeck_arduino_demo/eembed-strlen.cpp:
	Modified:
	* echeck_arduino_demo/echeck_arduino_demo.ino:

	Added:
	* echeck_tests_arduino/eembed.cpp:
	Deleted:
	* echeck_tests_arduino/eembed-assert.h:
	* echeck_tests_arduino/eembed-hosted.h:
	* echeck_tests_arduino/eembed-io.cpp:
	* echeck_tests_arduino/eembed-strcmp.cpp:
	* echeck_tests_arduino/eembed-strcpy.cpp:
	* echeck_tests_arduino/eembed-strlen.cpp:
	* echeck_tests_arduino/eembed-strstr.cpp:
	Modified: